WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223038
Web Inspector: Occasional crash under RemoteConnectionToTargetCocoa::close()
https://bugs.webkit.org/show_bug.cgi?id=223038
Summary
Web Inspector: Occasional crash under RemoteConnectionToTargetCocoa::close()
Blaze Burg
Reported
2021-03-10 12:42:51 PST
.
Attachments
Patch v1.0
(2.15 KB, patch)
2021-03-11 00:25 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2021-03-10 12:43:07 PST
<
rdar://74920246
>
Blaze Burg
Comment 2
2021-03-11 00:25:27 PST
Created
attachment 422911
[details]
Patch v1.0
EWS
Comment 3
2021-03-11 08:53:46 PST
commit-queue failed to commit
attachment 422911
[details]
to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 4
2021-03-11 10:52:09 PST
Committed
r274288
: <
https://commits.webkit.org/r274288
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422911
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug