Cherry-pick r274288. rdar://problem/76415622

Web Inspector: Occasional crash under RemoteConnectionToTargetCocoa::close()
    https://bugs.webkit.org/show_bug.cgi?id=223038
    <rdar://74920246>

    Reviewed by Alex Christensen.

    * inspector/remote/cocoa/RemoteConnectionToTargetCocoa.mm:
    (Inspector::RemoteConnectionToTarget::setup):
    (Inspector::RemoteConnectionToTarget::close):
    Don't use a capture default, and copy the targetIdentifier.

    Canonical link: https://commits.webkit.org/235183@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274288 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.332@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@275711 268f45cc-cd09-0410-ab3c-d52691b4dbfc